2015-10-07 18:10 UTC auto-commit